<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_add_favorite"
        android:icon="@drawable/ic_favorite_accent"
        android:orderInCategory="90"
        android:title="@string/action_add_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_remove_favorite"
        android:icon="@drawable/ic_favorite_border_accent"
        android:orderInCategory="90"
        android:title="@string/action_remove_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_accent"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always" />

</menu>
