<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view_flipper_search"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context="ca.kdounas.flickrphoto.app.fragment.SearchByTagFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"

        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#FF333333"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/edit_tagname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/txt_enter_tag"
            android:minWidth="200dp"
            android:singleLine="true"
            android:text="Tesla" />

        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_toRightOf="@id/edit_tagname"
            android:text="@string/txt_search" />
    </LinearLayout>


    <ProgressBar
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center" />


</ViewFlipper>
